@@ -5,7 +5,7 @@
 #include "funPieceListLog.h"
 #include <math.h>
 
-#define IFPRINT(arg) if(data_i==293 && total_changes==10) (arg)
+#define IFPRINT(arg) if(data_i==370 && total_changes==-308) (arg)
 
 void PeakSegPDPALog
 (int *data_vec, double *weight_vec, int data_count,
@@ -92,10 +92,9 @@ void PeakSegPDPALog
     }
   }
 
-  double best_cost, best_log_mean;
+  double best_cost, best_log_mean, prev_log_mean;
   double *best_mean_vec;
   int *prev_seg_vec;
-  bool equality_constraint_active;
   int prev_seg_end;
   
   // Decoding the cost_model_vec, and writing to the output matrices.
@@ -115,9 +114,8 @@ void PeakSegPDPALog
       IFPRINT(cost_model->print());
       cost_model->Minimize
 	(&best_cost, &best_log_mean,
-	 &prev_seg_end, &equality_constraint_active,
-	 min_log_mean, max_log_mean);
-      IFPRINT(printf("cost=%f log_mean=%f prev_end=%d constraint=%d\n", best_cost, best_log_mean, prev_seg_end, equality_constraint_active));
+	 &prev_seg_end, &prev_log_mean);
+      IFPRINT(printf("cost=%f log_mean=%f prev_end=%d prev_log_mean=%f\n", best_cost, best_log_mean, prev_seg_end, prev_log_mean));
       // for the models up to any data point, we store the best cost
       // and the total number of intervals.
       cost_mat[data_i + total_changes*data_count] = best_cost;
@@ -134,25 +132,12 @@ void PeakSegPDPALog
 	for(int seg_i=total_changes-1; 0 <= seg_i; seg_i--){
 	  //printf("seg_i=%d prev_seg_end=%d\n", seg_i, prev_seg_end);
 	  cost_model = &cost_model_vec[prev_seg_end + seg_i*data_count];
-	  if(equality_constraint_active){
-	    cost_model->findMean
-	      (best_log_mean, &prev_seg_end, &equality_constraint_active);
-	  }else{
-	    double this_min, this_max;
-	    if(seg_i % 2){
-	      // 1, 3, 5, ... up segment, lower bound.
-	      this_min = best_log_mean;
-	      this_max = max_log_mean;
-	    }else{
-	      // 0, 2, 4, ... down segment, upper bound.
-	      this_min = min_log_mean;
-	      this_max = best_log_mean;
-	    }
-	    cost_model->Minimize
-	      (&best_cost, &best_log_mean,
-	       &prev_seg_end, &equality_constraint_active,
-	       this_min, this_max);
+	  if(prev_log_mean != INFINITY){
+	    //equality constraint inactive
+	    best_log_mean = prev_log_mean;
 	  }
+	  cost_model->findMean
+	    (best_log_mean, &prev_seg_end, &prev_log_mean);
 	  best_mean_vec[seg_i] = exp(best_log_mean);
 	  prev_seg_vec[seg_i] = prev_seg_end;
 	}//for(seg_i
